# ComfyUI-DeepseekOCR-easy

./: README.md  nodes.py  pyproject.toml  requirements.txt
